# ai-market-pulse

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  XF1_HANDOFF.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml  intraday-alert.yml  pages.yml
docs/: NOTIFICATIONS.md  PUBLISHING.md
docs/superpowers/specs/: 2026-07-13-otc-fund-support-design.md
examples/: portfolio.csv  watchlist.yaml
prompts/: asset.md  asset_system.md  portfolio.md  portfolio_system.md
src/ai_market_pulse/: __init__.py  alerts.py  backtest.py  benchmarks.py  cli.py  config.py  dashboard.py  demo.py  doctor.py  engine.py  group_stats.py  history.py  indicators.py  insights.py  llm.py  market_cache.py  market_data.py  models.py  news.py  notify.py  portfolio.py  portfolio_import.py  reporting.py  sample.py  scoring.py  site.py  ui.py  web.py
tests/: conftest.py  test_alerts.py  test_backtest.py  test_benchmarks.py  test_cli.py  test_config.py  test_dashboard.py  test_demo.py  test_doctor.py  test_engine.py  test_fund_matching.py  test_fund_provider.py  test_group_stats.py  test_history.py  test_indicators.py  test_insights.py  test_llm.py  test_market_cache.py  test_market_data.py  test_models.py  test_news.py  test_notify.py  test_portfolio.py  test_portfolio_history.py  test_portfolio_import.py  test_reporting.py  test_sample.py  test_scoring.py  test_site.py  test_ui.py  test_web.py  test_web_console.py
